--- a/src/templates/private.html
+++ b/src/templates/private.html
@@ -1,4 +1,5 @@
 <h1>Go Saml Example</h1>
-<p>Wow! this is very confidential...</p>
+
+<p>Wow {{.Name}}, this is very confidential...</p>
 
 <a href="/">back</a>
